Documentation updates
Provide additional usage instructions for users who
may use the library in different configurations.
These scenarious are outlined together with sample
scripts demonstrating the required JPMS arguments for
each, if and when they are applicable.